yay! items are now populated into the main screen, and they can be clicked on. clicking on an item console logs it's information

--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 body {
   background-color: #00142d;
 }
+
+.items-display {
+  display: flex;
+}
+
+.item img {
+  width: 64px;
+  cursor: pointer;
+}
+
+#popup {
+  width: 85vw;
+  height: 50vh;
+  color: #000003;
+  background-color: #85c8f2;
+}
